java8 compatible, and auto switch to local transact if remote transact has problems